# sdfglib

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
c-compile/: CMakeLists.txt
c-compile/cmake/: docc-c-compileConfig.cmake.in
c-compile/src/compile/: codegen_build_pool.cpp  codegen_compiler.cpp  src_file_compiler.cpp  src_file_compiler_builder.cpp
c-compile/src/util/: docc_paths.cpp  offloading_instrumentation_plan.cpp  offloading_type_collector.cpp
c-compile/tests/: CMakeLists.txt  test.cpp
c-compile/tests/util/: docc_paths_test.cpp
llvm/: CMakeLists.txt  CPackOptions.cmake.in
llvm/driver/: CMakeLists.txt  analysis.cpp  driver.cpp  linker.cpp  utils.h
llvm/include/docc/: cmd_args.h  docc.h  docc_llvm_paths.h  docc_paths.h  plugin_registry.h  utils.h
llvm/integration/: .gitignore  CFG_pruner.py  apps_cuda_test.py  apps_none_test.py  apps_openmp_test.py  apps_sequential_test.py  apps_tenstorrent_test.py  blas_tenstorrent_test.py  llvm_test_suite.py  plugin_test.py  polybench_cuda_test.py  polybench_none_test.py  polybench_openmp_test.py  polybench_rocm_test.py  polybench_sequential_test.py  polybench_transfertuning_test.py  rodinia_cuda_test.py  rodinia_none_test.py  rodinia_openmp_test.py  rodinia_sequential_test.py  rtl_test.py  test_runner.py
llvm/src/: cmd_args.cpp  docc.cpp  docc_llvm_paths.cpp  docc_paths.cpp  plugin.cpp
llvm/src/analysis/: analysis.cpp  global_cfg_analysis.cpp  sdfg_registry.cpp
llvm/src/lifting/: function_to_sdfg.cpp  lift_report.cpp  lifting.cpp  utils.cpp
llvm/src/passes/: function_to_sdfg_pass.cpp  sdfg_simplify_pass.cpp
llvm/tests/: CMakeLists.txt
llvm/tests/lifting/: blas_lifting_test.cpp  function_lifting_test.cpp  intrinsic_lifting_test.cpp  libfunc_lifting_test.cpp  lifting_test.cpp  test_utils.h
mlir/: .gitignore  CMakeLists.txt  pyproject.toml  requirements.txt
mlir/benchmarks/: harness.py  run_all.py
mlir/benchmarks/torch/: batchnorm.py  conv2d.py  pooling.py  run_all.py  test_linear_net.py  test_matmul_net.py  test_pooling.py  test_transpose.py
mlir/bindings/: CMakeLists.txt  bindings.cpp
mlir/docc/torch/: __init__.py  torch_program.py
mlir/integration/: conftest.py  pytest.toml
mlir/integration/torch/: check.py  conftest.py  test_attention.py  test_batchnorm.py  test_bn_conv_bn_relu_maxpool.py  test_compile.py  test_conv2d.py  test_conv2d_net.py  test_convolution.py  test_device_residency_torch_cuda.py  test_device_residency_torch_rocm.py  test_dropout.py  test_dtypes.py  test_elementwise.py  test_embedding.py  test_encoder.py  test_fasterr_cnn_resnet50.py  test_flatten.py  test_layernorm.py  test_linear.py  test_linear_regression.py  test_matmul.py  test_mutation.py  test_padding.py  test_pooling.py  test_relu.py  test_remote_tuning.py  test_resnet18.py  test_softmax.py  test_target_overrides.py  test_transpose.py  test_yolo8.py
mlir/lib/: CMakeLists.txt
mlir/model_zoo/: test_bn_conv_bn_relu_maxpool.py  test_resnet18.py
mlir/test/arith/: addf.mlir  addi.mlir  andi.mlir  bitcast.mlir  cmpf_false.mlir  cmpf_oeq.mlir  cmpf_oge.mlir  cmpf_ogt.mlir  cmpf_ole.mlir  cmpf_olt.mlir  cmpf_one.mlir  cmpf_ord.mlir  cmpf_true.mlir  cmpf_ueq.mlir  cmpf_uge.mlir  cmpf_ugt.mlir  cmpf_ule.mlir  cmpf_ult.mlir  cmpf_une.mlir  cmpf_uno.mlir  cmpi_eq.mlir  cmpi_ne.mlir  cmpi_sge.mlir  cmpi_sgt.mlir  cmpi_sle.mlir  cmpi_slt.mlir  cmpi_uge.mlir  cmpi_ugt.mlir  cmpi_ule.mlir  cmpi_ult.mlir  constant.mlir  divf.mlir  divsi.mlir  divui.mlir  extf.mlir  extsi.mlir  extui.mlir  fptosi.mlir  fptoui.mlir  int_fma.mlir  (+21 more)
mlir/test/func/: empty_func.mlir  id.mlir
mlir/test/sdfg-json-to-c/: sdfg-json-to-c.cpp
mlir/tools/: CMakeLists.txt
mlir/tools/docc-mlir-opt/: CMakeLists.txt  docc-mlir-opt.cpp
opt/: CMakeLists.txt  README.md
opt/cmake/: transformation_schema_json.h.in
opt/json/: transformation.schema.json
opt/src/analysis/: data_transfer_elimination_analysis.cpp  scop_analysis.cpp
opt/src/einsum/: einsum.cpp
opt/src/passes/: collapse_pass.cpp  dot_expansion_pass.cpp  einsum.cpp  extended_data_transfer_minimization_pass.cpp  gemm_expansion_pass.cpp  map_fusion_by_domain_pass.cpp  opt_pipeline.cpp  readonly_transfer_hoisting_pass.cpp  redundant_load_elimination_pass.cpp
opt/src/transformations/: accumulator_tile.cpp  collapse_to_depth.cpp  einsum2dot.cpp  einsum2gemm.cpp  einsum_expand.cpp  einsum_extend.cpp  einsum_lift.cpp  einsum_promotion.cpp  highway_transform.cpp  in_local_storage.cpp  loop_condition_normalize.cpp  loop_distribute.cpp  loop_indvar_finalize.cpp  loop_interchange.cpp  loop_peeling.cpp  loop_rotate.cpp  loop_shift.cpp  loop_skewing.cpp  loop_split.cpp  loop_tiling.cpp  loop_unit_stride.cpp  map_collapse.cpp  map_fusion.cpp  multi_level_tiling.cpp  omp_transform.cpp  out_local_storage.cpp  recorder.cpp  replayer.cpp  tile_fusion.cpp  transformation_schema.cpp  vectorize_transform.cpp
opt/src/util/: offloading_instrumentation_plan.cpp  offloading_type_collector.cpp
opt/tests/: CMakeLists.txt  test.cpp
opt/tests/cuda/: cuda_kernel_test.cpp  cuda_library_nodes_test.cpp  softmax_dispatcher_test.cpp
opt/tests/einsum/: einsum_test.cpp
opt/tests/fixtures/: polybench.h
opt/tests/optimizations/: blocking_test.cpp  diamond_tiling_test.cpp  gpu_kernels_test.cpp
opt/tests/passes/: einsum_test.cpp  map_fusion_by_domain_pass_test.cpp  redundant_load_elimination_pass_test.cpp
opt/tests/rocm/: rocm_library_nodes_test.cpp
opt/tests/transformations/: accumulator_tile_test.cpp  collapse_to_depth_test.cpp  einsum2gemm_test.cpp  einsum_expand_test.cpp  einsum_extend_test.cpp  einsum_lift_test.cpp  einsum_promotion_test.cpp  gemm_blocking_test.cpp  in_local_storage_test.cpp  loop_collapse_test.cpp  loop_condition_normalize_test.cpp  loop_distribute_test.cpp  loop_indvar_finalize_test.cpp  loop_interchange_test.cpp  (+14 more)
pytorch/: pyproject.toml  requirements-base.txt  requirements-cuda.txt  requirements-rocm.txt  requirements.txt
pytorch/tests/: __init__.py  conftest.py
rpc/tests/: CMakeLists.txt  test_daisytuner_rpc.cpp
targets/tenstorrent/: CMakeLists.txt
(+1068 files in other folders)
