[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.12",
]
build-backend = "scikit_build_core.build"

[project]
name = "docc-ai"
dynamic = ["version"]
description = "Python bindings and MLIR conversion for JIT compiling PyTorch models to SDFGs."
authors = [{ name = "Daisytuner", email = "hello@daisytuner.com" }]
maintainers = [{ name = "Daisytuner", email = "hello@daisytuner.com" }]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Compilers",
]
keywords = ["pytorch", "mlir", "sdfg", "compiler", "optimization"]
dependencies = [
    # "docc-compiler",
    "numpy>=1.19.0",
    "ml_dtypes>=0.5.4"
]

[project.urls]
Homepage = "https://daisytuner.com"
Documentation = "https://docs.daisytuner.com"
Repository = "https://github.com/daisytuner/docc"
Issues = "https://github.com/daisytuner/docc/issues"

[tool.scikit-build]
wheel.packages = ["docc"]
cmake.source-dir = ".."
install.components = ["docc_mlir"]
cmake.define.PARENT_PROJECT_INSTALL_PREFIX = "docc/"
cmake.define.MLIR_BUILD_FRONTEND = "ON"
cmake.define.MLIR_BUILD_BINDINGS = "ON"
cmake.define.MLIR_DIR = "/usr/lib/llvm-19/lib/cmake/mlir"
cmake.define.SDFG_BUILD_TESTS = "OFF"
cmake.define.BUILD_TESTS = "OFF"
cmake.define.BUILD_BENCHMARKS = "OFF"
cmake.define.BUILD_BENCHMARKS_GOOGLE = "OFF"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "../VERSION"
regex = "(?P<value>\\d+\\.\\d+\\.\\d+)"

[tool.cibuildwheel]
build = "cp311-* cp312-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_*"
build-frontend = "build[uv]"

manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

test-command = "python -c \"import docc.mlir; print('docc-ai imported successfully')\""
test-requires = ["numpy", "ml_dtypes", "pytest"]

[tool.cibuildwheel.linux]
before-all = [
  "yum install -y boost-devel gmp-devel cmake git libcurl-devel autoconf automake libtool",
  "git clone --depth 1 --branch v3.11.3 https://github.com/nlohmann/json.git /tmp/nlohmann_json",
  "cmake -S /tmp/nlohmann_json -B /tmp/nlohmann_json/build -DJSON_BuildTests=OFF",
  "cmake --install /tmp/nlohmann_json/build",
  "curl -L https://libisl.sourceforge.io/isl-0.27.tar.xz | tar -xJ -C /tmp",
  "cd /tmp/isl-0.27 && ./configure && make -j$(nproc) && make install",

  # Build LLVM 19 + MLIR from source with RTTI enabled (required for SymEngine)
  "curl -L https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.0/llvm-project-19.1.0.src.tar.xz | tar -xJ -C /tmp",
  "cmake -S /tmp/llvm-project-19.1.0.src/llvm -B /tmp/llvm-build -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/opt/llvm19 -DLLVM_ENABLE_PROJECTS=mlir -DLLVM_ENABLE_RTTI=ON -DLLVM_BUILD_EXAMPLES=OFF -DLLVM_TARGETS_TO_BUILD=host -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_BENCHMARKS=OFF",
  "cmake --build /tmp/llvm-build --target install -j$(nproc)",
  "rm -rf /tmp/llvm-project-19.1.0.src /tmp/llvm-build",
]

[tool.cibuildwheel.linux.environment]
MLIR_DIR = "/opt/llvm19/lib/cmake/mlir"

[tool.cibuildwheel.macos]
before-all = [
  # Build tools
  "brew install cmake ninja uv",

  # Build dependencies (linked into the wheel)
  "brew install boost gmp isl nlohmann-json llvm@19",
]

# Ensure we build universal2 wheels for both Intel and Apple Silicon
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "14.0"
MAKEFLAGS = "-j$(sysctl -n hw.ncpu)"
MLIR_DIR = "/opt/homebrew/opt/llvm@19/lib/cmake/mlir"
